--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "server",
-  "version": "1.0.0",
   "description": "",
+  "version": "1.0.0",
+  "engines": {
+    "node": "12.11.1"
+    } ,
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
